--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,11 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.4.0
   cached_network_image: ^3.3.1
+  flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
+  path_provider: ^2.1.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
