--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   sqflite: ^2.3.0
   path_provider: ^2.1.1
   provider: ^6.1.2
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
